style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap');

body {
    margin: 0px;
    padding: 0px;
    color: white;
    background-color: #030303;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

/* Scrollbar: Firefox */
* {
    scrollbar-width: thin;
    scrollbar-color: #888 #000000;
}
/* Scrollbar: Webkit */
::-webkit-scrollbar {
    width: 8px;
}
::-webkit-scrollbar-track {
    background: #000000;
    border-radius: 10px;
}
::-webkit-scrollbar-thumb {
    background: #161616;
    border-radius: 10px;
}
::-webkit-scrollbar-thumb:hover {
    background: #252525;
}

#main-page-content {
    margin-left: 5%;
    margin-right: 5%;
}
#top-nav-bar {
    background-color: #131313d8;
    color: white;
    backdrop-filter: blur(10px);
    position: fixed;
    width: 100%;
    padding: 20px;
    font-size: 17px;
    z-index: 10;
    overflow-x: auto;
    overflow-y: hidden;
    white-space: nowrap;
    scrollbar-width: none;
    user-select: none;
}
#top-nav-bar #title {
    font-weight: bold;
    margin-left: 0px;
}

#title {
    margin-right: 5px;
}
.nav-bar-link, #fun-fact {
    margin-left: 2.5px;
    margin-right: 2.5px;
    font-style: normal;
    /*padding: 10px;
    border-radius: 100px;
    color: black;
    background-color: white;*/
}
#heading_container {
    color: white;
    background-image: url("resources/bg_3.jpg");
    box-shadow: 0px 0px 10px 0px rgb(15, 15, 15);
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
}
#heading_container h1 {
    font-size: 50px;
}
#heading_container hr {
    background: white;
    width: 120px;
    height: 6px;
}

.div-heading {
    font-size: 21px;
}
#footer {
    background-color: #232323;
    color: white;
    padding: 10px;
    padding-bottom: 15px;
    font-size: 14px;
    font-family: 'Roboto Mono', monospace;
}

/* Glassy (V2) Style */
.button {
    background: rgba(255, 255, 255, 0.2);
    border: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 100px; /* rounded corners */
    padding: 10px 20px;
    color: white;
    font-weight: 500;
    backdrop-filter: blur(8px); /* glass effect */
    -webkit-backdrop-filter: blur(8px);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
    cursor: pointer;
    transition: all 0.4s ease;
}

.button:hover {
    background: rgba(255, 255, 255, 0.3);
    box-shadow: 0 6px 16px rgba(0, 0, 0, 0.3);
}

.button:active {
    transform: scale(1.03);
}

hr {
    height: 5px;
    border-radius: 100px;
    width: 100%;
    background: linear-gradient(to right, #1177ec, #1172f1);
    border: none;
}

.item-card {
    background: rgba(255, 255, 255, 0.2);
    border: 1px solid rgba(255, 255, 255, 0.3);
    border-radius: 20px; /* rounded corners */
    padding: 10px 20px;
    margin-top: 25px;
    margin-bottom: 25px;
    backdrop-filter: blur(8px); /* glass effect */
    -webkit-backdrop-filter: blur(8px);
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
}

.banner {
    width: 100%;
    padding-top: 100px;
    padding-bottom: 100px;
}

